# rsx

./: .dockerignore  .editorconfig  .env.example  .gitignore  .npmrc  .oxlintrc.json  .prettierrc  .rustfmt.toml  CODING_STANDARDS.md  Cargo.toml  RSX_STANDARDS.md  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json  vitest.config.js  vitest.workspace.js
.cursor/rules/: common.mdc  rsx.mdc  rust.mdc  typescript.mdc
.github/: copilot-instructions.md  git-commit-instructions.md
.husky/: pre-commit
app/: Cargo.toml  package.json  tsconfig.json  tsconfig.node.json  vite.config.js
app/src/: main.rs
app/src/api/: auth.rs  form.rs  json.rs  mod.rs  token.rs
app/src/components/: footer.rsx  header.rsx  meta.rsx  skeleton.rsx
app/src/pages/: csr.rsx  each.rsx  if.rsx  index.rsx  raw.rsx  ssr.rsx  syntax.rsx
app/src/react/: csr.app.tsx  index.app.tsx  news.app.tsx
crates/rsx/: Cargo.toml  README.md
crates/rsx/src/: build.rs  config.rs  fetch.rs  header.rs  lib.rs  props.rs  request.rs  response.rs  router.rs  server.rs
crates/rsx/src/shared/: mod.rs
crates/rsx/tests/: lib_test.rs
