[workspace]
resolver = "2"
members = [
    "app",
    "crates/rsx",
]

[workspace.dependencies]
actix = "^0.13"
actix-web = "^4.9.0"
actix-ws = "^0.3.0"
actix-cors = "^0.7.0"
actix-multipart = "^0.7.2"
actix-rt = "^2.10.0"
anyhow = "^1.0.93"
async-stream = "^0.3.6"
async-trait = "^0.1.83"
ahash = "^0.8.12"
base64 = "^0.22.1"
chrono = "^0.4"
dotenv = "0.15"
env_logger = "^0.11.5"
futures = "^0.3.31"
futures-util = "^0.3.31"
fs_extra = "1.3.0"
fs-err = "3.1.0"
hex = "0.4.3"
home = "^0.5.11"
ignore = "^0.4"
lazy_static = "^1.5.0"
log = "^0.4.22"
quick_cache = "^0.6.14"
rand = "^0.8.5"
rayon = "^1.10.0"
regex = "^1.11.1"
serde_json = "^1.0.133"
tokio-util = "^0.7.12"
thiserror = "^2.0.1"
tokio-stream = "^0.1.17"
tempfile = "^3.19.1"
zip = "^3.0.0"
sys-info = "^0.9.1"
actix-files = "^0.6.6"
handlebars = "^6.2.0"
http = "^1.3.1"
url = "^2.5.3"
walkdir = "^2.5.0"
actix-session = { version = "^0.10.1", features = ["redis-session"] }
reqwest = { version = "^0.12", features = ["json", "multipart", "stream"] }
serde = { version = "^1", features = ["derive"] }
clap = { version = "^4.5.21", features = ["derive", "string"] }
tokio = { version = "^1", features = ["full"] }
validator = { version = "^0.20", features = ["derive"] }
uuid = { version = "^1.0", features = ["serde", "v4"] }
